name:                lxd
version:             0.1.0.0
synopsis:            Haskell intefrace to work with LXD (Linux container daemon)
-- description:
homepage:            https://github.com/konn/lxd#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.LXD
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , http-client
                     , http-client-tls
                     , tls
                     , connection
                     , unix
                     , text
                     , http-conduit
                     , network
                     , mtl
                     , time
                     , conduit
                     , aeson
                     , scientific
                     , exceptions
                     , unordered-containers
                     , lens-aeson
                     , lens
                     , data-default
                     , http-types
                     , websockets
                     , transformers
                     , wuss
                     , websockets
                     , lifted-base
                     , stm
                     , stm-conduit
                     , stm-chans
                     , monad-control
                     , transformers-base
                     , conduit-combinators
                     , async
                     , lifted-async
  default-language:    Haskell2010

executable simple
  hs-source-dirs:      examples
  buildable:           False
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , lxd
  default-language:    Haskell2010

test-suite lxd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lxd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/konn/hs-lxd
